align issues fix

--- a/src/index.css
+++ b/src/index.css
@@ -47,16 +47,18 @@ code {
 	align-items: center;
 	justify-content: space-between;
 	padding: 0;
-	padding-right: 5px;
-	padding-left: 5px;
+	
+
 }
 
 .right {
+	margin-right: 3px;
 	justify-content: flex-start;
-	margin-right: 8px;
+
 }
 
 .left {
+	margin-left: 3px;
 	justify-content: flex-start;
 }
 
